feat(index page): :sparkles: Create initial structure

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -71,6 +71,23 @@
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
+.aboutMeButton {
+  background: #FFDBDE;
+  border-radius: 5px;
+  border: 1px solid black;
+  padding: 0.75rem;
+  font-size: 1.1rem;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
+}
+
+.aboutMeButton:hover,
+.aboutMeButton:focus,
+.aboutMeButton:active {
+  color: #0070f3;
+  border-color: #0070f3;
+}
+
 .grid {
   display: flex;
   align-items: center;
@@ -82,7 +99,8 @@
 
 .card {
   margin: 1rem;
-  flex-basis: 45%;
+  /* flex-basis: 45%; */
+  width: 25rem;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
@@ -90,6 +108,14 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+.aboutMeLink {
+  text-align: center;
+  font-size: 1.1rem;
+  /* font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace; */
+  font-family: DejaVu Sans Mono, monospace;
 }
 
 .card:hover,
@@ -112,6 +138,15 @@
 
 .logo {
   height: 1em;
+}
+
+.profilePic {
+  border-radius: 50%;
+}
+
+.profilePicDiv {
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 @media (max-width: 600px) {
