--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: #F1FAEE;
 }
 
 .main {
@@ -23,6 +24,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .footer img {
@@ -55,6 +58,8 @@
 .title,
 .description {
   text-align: center;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .description {
@@ -63,7 +68,7 @@
 }
 
 .code {
-  background: #fafafa;
+  background: #A8DADC;
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
@@ -72,9 +77,9 @@
 }
 
 .aboutMeButton {
-  background: #FFDBDE;
+  background: #A8DADC;
   border-radius: 5px;
-  border: 1px solid black;
+  border: 1px solid #000000;
   padding: 0.75rem;
   font-size: 1.1rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
@@ -84,8 +89,8 @@
 .aboutMeButton:hover,
 .aboutMeButton:focus,
 .aboutMeButton:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #457B9D;
+  border-color: #457B9D;
 }
 
 .grid {
@@ -100,14 +105,17 @@
 .card {
   margin: 1rem;
   /* flex-basis: 45%; */
-  width: 25rem;
+  width: 32rem;
   padding: 1.5rem;
   text-align: left;
   color: inherit;
+  background: #A8DADC;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .aboutMeLink {
@@ -121,8 +129,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #457B9D;
+  border-color: #457B9D;
 }
 
 .card h3 {
