--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -154,6 +154,11 @@
   line-height: 1.5;
 }
 
+.githubLink {
+  color: #457B9D;
+  border-color: #457B9D;
+}
+
 .footer {
   width: 100%;
   height: 100px;
