--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,6 @@
 .container {
   min-height: 100vh;
   min-width: 100vw;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -64,7 +63,7 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 6vw;
 }
 
 .title a {
@@ -118,6 +117,10 @@
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
+  padding: 0 10vw;
+  font-size: 2vw;
+  /* margin-left: 8vw;
+  margin-right: 8vw; */
 }
 
 .card {
